# weaklink-labs

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  CONTENT-AUDIT.md  CONTENT-QUALITY-REVIEW.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  fix_sigma_rules.py  pyproject.toml  sbom.cdx.json  start.sh  stop.sh
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: new-lab-proposal.md
.github/codeql/: codeql-config.yml
.github/workflows/: check-docs.yml  codeql.yml  dependency-review.yml  publish-images.yml  secret-scan.yml  test-labs.yml
cli/: weaklink
docs/maintainers/: github-settings-checklist.md
guide/: mkdocs.yml
guide/docs/: achievements.md  coming-soon.md  facilitator-guide.md  getting-started.md  index.md  placement-test.md  roadmap.md
helm/weaklink-labs/: Chart.yaml  values.yaml
images/guide/: Dockerfile
images/lab-setup/: Dockerfile  setup-labs.py  setup-labs.sh
images/workstation/: .npmrc  Dockerfile  lab-init  lab-reset  motd  pip.conf  verify-server.py  weaklink-help
scripts/: build-images.sh  check-docs.sh  generate-alert-context.py  run-verify-suite.sh  sign-images.sh
tests/platform/: test_host_ops.py  test_lab_runtime.py  (+3 more)
weaklink_platform/: __init__.py  __main__.py  cli.py  console.py  gitea_seed.py  golden_labs.py  helper_cli.py  host_ops.py  lab_runtime.py  labs.py  manifest.py  paths.py  progress.py  registry_seed.py  runner_seed.py  seeding.py  subprocess_utils.py  workstation.py  yamlish.py
(+1017 files in other folders)
